stop bouncing of calltree on expanding or collapsing

--- a/public/components/callTree/callTree.less
+++ b/public/components/callTree/callTree.less
@@ -104,4 +104,8 @@
   .query-count span {
     color: #fff;
   }
+
+  .stagemonitor-calltree-executiontime {
+    width: 10%;
+  }
 }
